# kakaothread

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: configuration.md
src/kakaothread/: __init__.py  chunking.py  cli.py  config.py  cost.py  domain.py  evaluate.py  incremental.py  janitor.py  jobs.py  llm_segment.py  logging_setup.py  outputs.py  parallel.py  pipeline.py  preprocess.py  provider_pool.py  report.py  segment_graph.py
tests/: test_chunking.py  test_cli.py  test_config.py  test_domain.py  test_evaluate.py  test_incremental.py  test_janitor.py  test_jobs.py  test_parallel.py  test_pipeline.py  test_preprocess.py  test_provider_pool.py
