[project]
name = "kakaothread"
version = "0.1.0"
description = "카카오톡 오픈채팅 로그를 LLM으로 주제별 스레드로 분리(conversation disentanglement)하는 도구"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "YoungGi" }]
requires-python = ">=3.12"
keywords = ["kakaotalk", "conversation-disentanglement", "topic-segmentation", "llm", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: Korean",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "tqdm>=4.68.3",
]

[project.scripts]
kakaothread = "kakaothread.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
